Improve zip util